--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: ChangYuan Liu's Website
 email: changyuan.liu@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  ChangYuan is passionate about learning and applying his knowledge to make the world a little bit better.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: N/A
